<resources>

    <!-- General -->
    <string name="app_name">Gallery</string>

    <!-- Gallery -->
    <string name="gallery_title">Gallery</string>
    <string name="gallery_menu_search">Search</string>
    <string name="gallery_menu_search_hint">Search Flickr</string>
    <string name="gallery_menu_favorites">Favorites</string>
    <string name="gallery_menu_history">History</string>
    <string name="gallery_menu_settings">Settings</string>

    <!-- Photo -->
    <string name="photo_title">Photo</string>
    <string name="photo_menu_share">Share</string>
    <string name="photo_menu_web">View in Browser</string>
    <string name="photo_menu_favorite">Favorite</string>
    <string name="photo_menu_unfavorite">Unfavorite</string>

    <!-- Favorites -->
    <string name="favorites_title">Favorites</string>
    <string name="favorites_menu_delete">Clear</string>
    <string name="favorites_none">None</string>

    <!-- History -->
    <string name="history_title">History</string>
    <string name="history_menu_sync">Sync</string>
    <string name="history_menu_clear">Clear</string>
    <string name="history_none">None</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_menu_clear">Clear App Data</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_licenses">Licenses</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version</string>

    <!-- Dialogs -->
    <string name="dialog_licenses_title"><b>Open-Source Licenses</b></string>
    <string name="dialog_about_content"><b>Photo Gallery</b>\n\nCopyright \u00A9 2015\nMatthew Compton\nAll Rights Reserved</string>
    <string name="dialog_clear_title">Clear All Data?</string>
    <string name="dialog_clear_content">This will include all favorites, recent searches, and any preferences.</string>
    <string name="dialog_clear_toast">App data cleared.</string>
    <string name="dialog_connection_content"><b>No Network Connection</b>\n\nPlease check your Internet connection.</string>

    <!-- Polling -->
    <string name="polling_title">New Photo Gallery Pictures</string>
    <string name="polling_text">You have new pictures in Photo Gallery.</string>

    <!-- Transitions -->
    <string name="transition_photo">transition_photo</string>

    <!-- Metadata -->
    <string name="facebook_app_id">529545513865826</string>

</resources>