<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_photo_share"
        android:icon="@drawable/ic_share"
        android:title="@string/photo_menu_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_photo_favorite"
        android:icon="@drawable/ic_heart_empty"
        android:title="@string/photo_menu_favorite"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_item_photo_unfavorite"
        android:icon="@drawable/ic_heart_filled"
        android:title="@string/photo_menu_unfavorite"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_item_photo_web"
        android:icon="@drawable/ic_web"
        android:title="@string/photo_menu_web"
        app:showAsAction="ifRoom"
        />

</menu>